--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,8 +53,6 @@ mybatis:
 
 # showSql
 logging:
+  config: src/main/resources/logback.xml
   level:
-    com:
-      example:
-        rubik:
-          mapper: debug
+    com.example.rubik.mapper: trace
