--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -45,6 +45,23 @@ spring:
         login-password: admin
         allow: 127.0.0.1
         #deny: 192.168.1.100
+  redis:
+    host: localhost
+    port: 6379
+    password: root
+    #Redis数据库索引（默认为0）
+    database: 0
+    pool:
+      #连接池中的最大空闲连接
+      max-idle: 8
+      #连接池中的最小空闲连接
+      min-idle: 1
+      #连接池最大连接数（使用负值表示没有限制）
+      max-active: 8
+      #连接池最大阻塞等待时间（使用负值表示没有限制）
+      max-wait: -1
+    #连接超时时间（毫秒）
+    timeout: 5000
 
 # mybatis
 mybatis:
